Fix Angular button highlight on mobile

--- a/docs/.vuepress/theme/styles/layout/sidebar.styl
+++ b/docs/.vuepress/theme/styles/layout/sidebar.styl
@@ -615,7 +615,8 @@
 
     /* active item */
     .i-react + .nav-item .nav-dropdown .dropdown-item:nth-child(2) a,
-    .i-javascript + .nav-item .nav-dropdown .dropdown-item:nth-child(1) a  {
+    .i-javascript + .nav-item .nav-dropdown .dropdown-item:nth-child(1) a,
+    .i-angular + .nav-item .nav-dropdown .dropdown-item:nth-child(3) a  {
         background: $borderColor
     }
 
