--- a/docs/.vuepress/theme/styles/theme/darkmode.styl
+++ b/docs/.vuepress/theme/styles/theme/darkmode.styl
@@ -275,7 +275,8 @@ html.theme-dark {
 
                 /* active item */
                 .i-react + .nav-item .nav-dropdown .dropdown-item:nth-child(2) a,
-                .i-javascript + .nav-item .nav-dropdown .dropdown-item:nth-child(1) a  {
+                .i-javascript + .nav-item .nav-dropdown .dropdown-item:nth-child(1) a,
+                .i-angular + .nav-item .nav-dropdown .dropdown-item:nth-child(3) a  {
                     background: $borderColor
                 }
 
